--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="together we ride" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./typography.css" />
+    <link rel="stylesheet" href="./styles-head.css" />
     <title>:')</title>
   </head>
   <body>
@@ -28,27 +29,53 @@
           <img src="./images/icon-hamburger.svg" alt="icon-hamburger" />
         </button>
       </nav>
-      <main class="main"></main>
     </header>
+    <main class="main">
+      <div class="main__cont">
+        <section class="section-head">
+          <div class="section-head__imgbox">
+            <img src="./images/logo-mastercraft.svg" alt="logo-mastercraft" />
+          </div>
+          <h1 class="section-head__title primary-header">
+            Mastercraft Bamboo Monitor Riser
+          </h1>
+          <p class="section-head__description subheader">
+            A beautiful & handcrafted monitor stand to reduce neck and eye
+            strain.
+          </p>
+          <div class="section-head__button-box">
+            <button
+              class="section-head__backProjectBtn backProjectBtn cta-btn main-btn"
+            >
+              Back this project
+            </button>
+            <button class="section-head__bookmarkBtn bookmarkBtn cta-btn">
+              <img src="./images/icon-bookmark.svg" alt="icon-bookmark" />
+              <span class="section-head__bookmarkText"> Bookmark </span>
+            </button>
+          </div>
+        </section>
+        <section class="section-stats"></section>
+        <section class="section-options"></section>
+      </div>
+    </main>
 
-    Mastercraft Bamboo Monitor Riser A beautiful & handcrafted monitor stand to
-    reduce neck and eye strain. Back this project Bookmark $89,914 of $100,000
-    backed 5,007 total backers 56 days left About this project The Mastercraft
-    Bamboo Monitor Riser is a sturdy and stylish platform that elevates your
-    screen to a more comfortable viewing height. Placing your monitor at eye
-    level has the potential to improve your posture and make you more
-    comfortable while at work, helping you stay focused on the task at hand.
-    Featuring artisan craftsmanship, the simplicity of design creates extra desk
-    space below your computer to allow notepads, pens, and USB sticks to be
-    stored under the stand. Bamboo Stand Pledge $25 or more You get an ergonomic
-    stand made of natural bamboo. You've helped us launch our promotional
-    campaign, and you’ll be added to a special Backer member list. 101 left
-    Select Reward Black Edition Stand Pledge $75 or more You get a Black Special
-    Edition computer stand and a personal thank you. You’ll be added to our
-    Backer member list. Shipping is included. 64 left Select Reward Mahogany
-    Special Edition Pledge $200 or more You get two Special Edition Mahogany
-    stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our
-    Backer member list. Shipping is included. 0 left Out of Stock
+    $89,914 of $100,000 backed 5,007 total backers 56 days left About this
+    project The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
+    platform that elevates your screen to a more comfortable viewing height.
+    Placing your monitor at eye level has the potential to improve your posture
+    and make you more comfortable while at work, helping you stay focused on the
+    task at hand. Featuring artisan craftsmanship, the simplicity of design
+    creates extra desk space below your computer to allow notepads, pens, and
+    USB sticks to be stored under the stand. Bamboo Stand Pledge $25 or more You
+    get an ergonomic stand made of natural bamboo. You've helped us launch our
+    promotional campaign, and you’ll be added to a special Backer member list.
+    101 left Select Reward Black Edition Stand Pledge $75 or more You get a
+    Black Special Edition computer stand and a personal thank you. You’ll be
+    added to our Backer member list. Shipping is included. 64 left Select Reward
+    Mahogany Special Edition Pledge $200 or more You get two Special Edition
+    Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
+    to our Backer member list. Shipping is included. 0 left Out of Stock
 
     <!-- Selection modal start -->
 
@@ -89,5 +116,6 @@
     campaign is completed. Got it!
 
     <!-- Success modal end -->
+    <script src="script.js"></script>
   </body>
 </html>
