finished portion with stats and plede amount

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./typography.css" />
     <link rel="stylesheet" href="./styles-head.css" />
+    <link rel="stylesheet" href="./styles-stats.css" />
+    <link rel="stylesheet" href="./styles-options.css" />
     <title>:')</title>
   </head>
   <body>
@@ -55,27 +57,123 @@
             </button>
           </div>
         </section>
-        <section class="section-stats"></section>
-        <section class="section-options"></section>
+        <section class="section-stats">
+          <ul class="section-stats__stats">
+            <li class="section-stats__stat">
+              <p class="section-stats__quantity stat-q">$89,914</p>
+              <p class="section-stats__stat-name stat-t">of $100,000 backed</p>
+            </li>
+            <li class="section-stats__stat">
+              <p class="section-stats__quantity stat-q">5,007</p>
+              <p class="section-stats__stat-name stat-t">total backers</p>
+            </li>
+            <li class="section-stats__stat">
+              <p class="section-stats__quantity stat-q">56</p>
+              <p class="section-stats__stat-name stat-t">days left</p>
+            </li>
+          </ul>
+          <progress
+            value="60"
+            max="100"
+            class="section-stats__progress"
+          ></progress>
+        </section>
+        <section class="section-options">
+          <div class="section-options__cont">
+            <p class="section-options__title about-title">About this project</p>
+            <p class="section-options__description desc">
+              The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
+              platform that elevates your screen to a more comfortable viewing
+              height. Placing your monitor at eye level has the potential to
+              improve your posture and make you more comfortable while at work,
+              helping you stay focused on the task at hand. <br />
+              <br />
+              Featuring artisan craftsmanship, the simplicity of design creates
+              extra desk space below your computer to allow notepads, pens, and
+              USB sticks to be stored under the stand.
+            </p>
+
+            <ul class="section-options__options">
+              <li class="section-options__option">
+                <div class="section-options__option-cont">
+                  <div class="section-options__row-1">
+                    <p class="section-options__pledge-name pledge-name">
+                      Bamboo Stand
+                    </p>
+                    <p class="section-options__pledge-amount pledge-quantity">
+                      Pledge $25 or more
+                    </p>
+                  </div>
+                  <p class="section-options__pledge-description desc">
+                    You get an ergonomic stand made of natural bamboo. You've
+                    helped us launch our promotional campaign, and you’ll be
+                    added to a special Backer member list.
+                  </p>
+                  <div class="section-options__row3">
+                    <p class="section-options__left stat-t">
+                      <span class="stat-q">101</span> left
+                    </p>
+                    <button class="section-options__cta reward-btn">
+                      Select Reward
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="section-options__option">
+                <div class="section-options__option-cont">
+                  <div class="section-options__row-1">
+                    <p class="section-options__pledge-name pledge-name">
+                      Black Edition Stand
+                    </p>
+                    <p class="section-options__pledge-amount pledge-quantity">
+                      Pledge $75 or more
+                    </p>
+                  </div>
+                  <p class="section-options__pledge-description desc">
+                    You get a Black Special Edition computer stand and a
+                    personal thank you. You’ll be added to our Backer member
+                    list. Shipping is included.
+                  </p>
+                  <div class="section-options__row3">
+                    <p class="section-options__left stat-t">
+                      <span class="stat-q">64</span> left
+                    </p>
+                    <button class="section-options__cta reward-btn">
+                      Select Reward
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="section-options__option">
+                <div class="section-options__option-cont">
+                  <div class="section-options__row-1">
+                    <p class="section-options__pledge-name pledge-name">
+                      Mahogany Special Edition
+                    </p>
+                    <p class="section-options__pledge-amount pledge-quantity">
+                      Pledge $200 or more
+                    </p>
+                  </div>
+                  <p class="section-options__pledge-description desc">
+                    You get two Special Edition Mahogany stands, a Backer
+                    T-Shirt, and a personal thank you. You’ll be added to our
+                    Backer member list. Shipping is included.
+                  </p>
+                  <div class="section-options__row3">
+                    <p class="section-options__left stat-t">
+                      <span class="stat-q">0</span> left
+                    </p>
+                    <button class="section-options__cta reward-btn">
+                      Out of Stock
+                    </button>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </section>
       </div>
     </main>
-
-    $89,914 of $100,000 backed 5,007 total backers 56 days left About this
-    project The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
-    platform that elevates your screen to a more comfortable viewing height.
-    Placing your monitor at eye level has the potential to improve your posture
-    and make you more comfortable while at work, helping you stay focused on the
-    task at hand. Featuring artisan craftsmanship, the simplicity of design
-    creates extra desk space below your computer to allow notepads, pens, and
-    USB sticks to be stored under the stand. Bamboo Stand Pledge $25 or more You
-    get an ergonomic stand made of natural bamboo. You've helped us launch our
-    promotional campaign, and you’ll be added to a special Backer member list.
-    101 left Select Reward Black Edition Stand Pledge $75 or more You get a
-    Black Special Edition computer stand and a personal thank you. You’ll be
-    added to our Backer member list. Shipping is included. 64 left Select Reward
-    Mahogany Special Edition Pledge $200 or more You get two Special Edition
-    Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-    to our Backer member list. Shipping is included. 0 left Out of Stock
 
     <!-- Selection modal start -->
 
